Fix 'remove track' button alignment

--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -364,7 +364,7 @@ body {
 }
 .col-queue-button,
 .col-track-button {
-  width: 40px;
+  width: 46px;
 }
 
 .queue-playing {
